php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #73585 Logging of "Internal Zend error - Missing class information" missing class name
Submitted: 2016-11-23 07:43 UTC Modified: -
From: mhagstrand at gmail dot com Assigned:
Status: Closed Package: *General Issues
PHP Version: 7.1.0RC6 OS:
Private report: No CVE-ID: None
 [2016-11-23 07:43 UTC] mhagstrand at gmail dot com
Description:
------------
When I was looking at https://bugs.php.net/bug.php?id=73583 I had reversed the order of the class and the function. I noticed error message was not outputting the class name.

Test script:
---------------
<?php
if (true) {
    function thing() { }
    class thing { }
}
?>

Expected result:
----------------
Fatal error: Internal Zend error - Missing class information for thing in /opt/codebases/php-src/crash.php on line 4

Actual result:
--------------
Fatal error: Internal Zend error - Missing class information for  in /opt/codebases/php-src/crash.php on line 4

Patches

Pull Requests

Pull requests:

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2016-11-24 04:05 UTC] laruence@php.net
Automatic comment on behalf of laruence@gmail.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=e19d263d81452c2117773387680e3da0716f1f34
Log: Fixed bug #73585 (Logging of &quot;Internal Zend error - Missing class information&quot; missing class name)
 [2016-11-24 04:05 UTC] laruence@php.net
-Status: Open +Status: Closed
 [2016-11-30 23:13 UTC] davey@php.net
Automatic comment on behalf of laruence@gmail.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=e19d263d81452c2117773387680e3da0716f1f34
Log: Fixed bug #73585 (Logging of &quot;Internal Zend error - Missing class information&quot; missing class name)
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Sep 19 16:00:01 2026 UTC