Fixed bug #73585 (Logging of "Internal Zend error - Missing class information" missing class name)

Actually, I doubt how thing bug could be triggered